# tfc

./: .gitignore  .readthedocs.yml  .setup.py [conflicted].swp  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  build-wheels.sh  clang-format.yaml  notes.txt  pyproject.toml  requirements.txt  run.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  ci.yml  publish_wheels.yml  publish_wheels_test_pypi.yml  run_most_examples.yml  wheels.txt  wheels.yml  windows-test.yml  windows_test_2.yml
doc/: .gitignore  CMakeLists.txt  Doxyfile.in  ToDo.txt  conf.py  index.rst
doc/notebooks/: MakePlot.ipynb  MultivariateTFC.ipynb  UnivariateTFC.ipynb
docs/: .gitignore  CMakeLists.txt  Doxyfile  ToDo.txt  api.rst  conf.py  index.rst  index.rst~  modules.rst  requirements.txt  test.py  tfc.utils.rst
docs/animations/: MultivariateAnimation.py  UnivariateAnimation.py
docs/notebooks/: BasisFunctionBackends.ipynb  CeSolver.ipynb  LS.ipynb  Latex.ipynb  MakePlot.ipynb  MultivariateTFC.ipynb  NLLS.ipynb  ODE.ipynb  ODE_system.ipynb  PDE.ipynb  PlotlyMakePlot.ipynb  UnivariateTFC.ipynb  pejit.ipynb  run_notebooks.py  test.ipynb
docs/source/: modules.rst  tfc.rst  tfc.utils.rst
examples/Carl_Leake_Dissertation/: README.md
examples/Carl_Leake_Dissertation/Appendices/: Appendix_B.py  Appendix_C.py  Appendix_D.py  Appendix_I.py
examples/Carl_Leake_Dissertation/Appendices/Appendix_B/: Example_B_2.py  Example_B_5.py  Example_D_1.py
examples/Carl_Leake_Dissertation/Appendices/Appendix_D/: Example_D_1.py  Example_D_2.py  Example_D_3.py
examples/Carl_Leake_Dissertation/Appendices/Appendix_I/: Example_I_1.py  Example_I_2.py  Example_I_3.py  Example_I_4.cdf  Example_I_4.nb  Example_I_5.py
examples/Carl_Leake_Dissertation/Chapter_2/: Example_2_4.py  Example_2_6.py  Example_2_9.py
examples/Carl_Leake_Dissertation/Chapter_3/: Example_3_2_spectral_method.py  Example_3_2_tfc.py  Example_3_4.py  Example_3_5.py  Example_3_5_hist.py  Navier_Stokes_DeepTFC.py  Navier_Stokes_TFC_and_XTFC.py  XtfcData.txt
examples/Carl_Leake_Dissertation/Chapter_3/aux/: Example_3_4_aux.py  Navier_Stokes_DeepTFC_aux.py
examples/Carl_Leake_Dissertation/Chapter_4/BiharmonicEquation/: BiharmonicCartesianCoordinates.py  BiharmonicPolarCoordinates.py
examples/Carl_Leake_Dissertation/Chapter_4/NaturalBalloonShape/: BalloonData.xlsx  ConstantCircumfrentialStress.py  ConstantCircumfretialStress.py  NaturalBalloonShapes.py  TfcInit.pkl
examples/Carl_Leake_Dissertation/Chapter_4/WaveEquation/: WaveEquation.py  WaveEquation2D.py  WaveEquationComparison2D.py
examples/Extra_Examples/PDE/: Burgers1D.py  Deep-TFCBurgers1D.py  DeepTFCBurgers1DClass.py
examples/Hunter_Johnston_Dissertation/: README.md
examples/Hunter_Johnston_Dissertation/Chapter_2/Example_2_9/: Figure_2_1.py  Figure_2_2.py
examples/Hunter_Johnston_Dissertation/Chapter_4/Example_4_11/: IVP2BVP.py  mainIVP2BVP.py
examples/Hunter_Johnston_Dissertation/Chapter_4/Example_4_4/: BVP_ode.py  BVP_spectral.py  BVP_tfc.py  README.md  mainBVP.py  timeBVP.py
examples/Hunter_Johnston_Dissertation/Chapter_4/Example_4_5/: shootingMethod_linearNonlnear.py  spectral_linearNonlinear.py  tfc_linearNonlinear.py
examples/Hunter_Johnston_Dissertation/Chapter_4/Example_4_6/: convectionDiffusionGen.py  convectionDiffusionNLS.py  convectionDiffusion_fsolve.py
examples/Hunter_Johnston_Dissertation/Chapter_4/Example_4_7/: UnknownTime.py  UnknownTime_Gen.py  UnknownTime_fsolve.py
examples/Hunter_Johnston_Dissertation/Chapter_4/Example_4_8/: Lyap.py  plotLyap.py  plotScaleCompare.py  plotTime.py  timingLyap.py  util.py
examples/Hunter_Johnston_Dissertation/Chapter_4/Example_4_9/: Halo.py  diffCor.py  plotHalo.py
examples/Hunter_Johnston_Dissertation/Chapter_4/Examples_4_123/: README.md  laneEmden_spectral.py  laneEmden_tfc.py  mainLaneEmden.py  timeLaneEmden.py
examples/TfcBook/: README.md
examples/TfcBook/Appendices/: example_B.py  example_B_12.py  example_B_2.py
examples/TfcBook/Chapter_1/: Problem_1.cdf  Problem_1.nb  Problem_2.cdf  Problem_2.nb  Problem_3.cdf  Problem_3.nb  Problem_4.py  Problem_5.cdf  Problem_5.nb  Problem_6.py  example_1_16.py  example_1_18.py  example_1_19.py  example_1_20.py  example_1_21.py  example_1_23.py  example_1_29.py  example_1_30.py
examples/TfcBook/Chapter_2/: Problem_1.cdf  Problem_1.nb  Problem_2.cdf  Problem_2.nb  Problem_3.cdf  Problem_3.nb  Problem_4.cdf  Problem_4.nb  example_2_16.py  example_2_4.py  example_2_8.py
examples/TfcBook/Chapter_3/: Example_3_5_1.py  Example_3_5_2.py  Example_3_8_1.py  Problem7.py  Problem_1.py  Problem_2.py  Problem_3.py  Problem_4.py  Problem_5.py  Problem_6.py  Problem_7.py  Problem_8.py  example_3_1.py  section_3_5_1.py  section_3_5_2.py  section_3_5_3  section_3_5_4.py  section_3_6_1  section_3_6_2  section_3_6_3_Burgers_Deep-TFC.py  section_3_6_3_Burgers_TFC.py  section_3_6_4_Deep-TFC.py  section_3_6_4_TFC_and_X-TFC.py
examples/TfcBook/Chapter_4/: Example_4_2.py  Figure_4_3.py
src/: CMakeLists.txt
src/cxx/: BF.cxx  BF.h  CMakeLists.txt
src/cxx/archive/: BF.cxx  BF.h
src/doc/: .gitignore  CMakeLists.txt  Doxyfile.in  conf.py  index.rst
src/doc/notebooks/: MakePlot.ipynb  PDE.ipynb  UnivariateTFC.ipynb  Utilities.ipynb
src/python/: DTFC.py  Latex.py  TFC.py  TFCUtils.py  nTFC.py
src/swig/: BF.i  CMakeLists.txt
src/swig/python/: CMakeLists.txt  setup.py.in
src/tfc/: TFC.py  __init__.py  mtfc.py  nTFC.py  utfc.py  utils.py  version.py
src/tfc/utils/: BF.cc  BF.h  BF_Py.cc  BF_Py.py  CMakeLists.txt  CeSolver.py  Html.py  Latex.py  MakePlot.py  MayaviMakePlot.py  PlotlyMakePlot.py  TFCUtils.py  __init__.py  tfc_types.py  types.py
src/tfc/utils/BF/: BF.cxx  BF.h  BF.i  BF.py  BF_Py.cc  BF_Py.py  CMakeLists.txt  __init__.py
src/utils/: JaxPrimitivePrinter.py  JaxPrimitivePrintout.py
tests/: bar.py  mine.py  new.py  pOP.py  test.py  test_BF.py  test_ODE.py  test_PDE.py  test_all  test_ce_solver.py  test_complex_ODE.py  test_nBF.py  test_step.py
utils/: Makefile
(+27 files in other folders)
