[build-system]
requires = ["setuptools>=42", 
            "wheel", 
            "numpy>=2.1",
]
build-backend = "setuptools.build_meta"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310','py311']

[tool.cibuildwheel]
before-build = "pip install setuptools wheel numpy"
skip = "pp* *-musllinux*"
manylinux-x86_64-image = "manylinux2014"
test-requires = ["pytest"]
test-command = "pytest {package}/tests"
test-skip = "*-macosx_arm64"

[tool.cibuildwheel.linux]
before-all = "yum install -y swig"
archs = ["x86_64"]

[tool.cibuildwheel.macos]
before-all = "brew install swig"
archs = ["arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add swig"

